[package]
name = "web_server_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
hyper = { version = "1.6.0", features = ["full", "server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version="1.16.0", features=["v4"]}
